--- a/🧅/Upsell/03/index.html
+++ b/🧅/Upsell/03/index.html
@@ -139,7 +139,7 @@
         window.onload = updateProgressBar;
 
         document.getElementById('paymentButton').addEventListener('click', function() {
-            window.location.href = 'https://pay.pagueconfiavel.com/checkout/92ac1348-171f-4568-ac45-fa2e309ee211'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
+            window.location.href = 'https://pay.sunize.com.br/YHcUxEuQ'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
         });
     </script>
 
