--- a/🧅/Upsell/04/index.html
+++ b/🧅/Upsell/04/index.html
@@ -138,7 +138,7 @@
         window.onload = updateProgressBar;
 
         document.getElementById('paymentButton').addEventListener('click', function() {
-            window.location.href = 'https://pay.pagueconfiavel.com/checkout/4b3f9b53-b075-4474-97e3-6894bf8405a6'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
+            window.location.href = 'https://pay.sunize.com.br/ULoZLOxG'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
         });
     </script>
 
