--- a/🧅/Upsell/02/index.html
+++ b/🧅/Upsell/02/index.html
@@ -130,7 +130,7 @@
         window.onload = updateProgressBar;
 
         document.getElementById('paymentButton').addEventListener('click', function() {
-            window.location.href = 'https://pay.pagueconfiavel.com/checkout/570e00a0-18d2-4ce5-880c-852ececea8a2'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
+            window.location.href = 'https://pay.sunize.com.br/btjLTMiS'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
         });
     </script>
 
