--- a/🛞/Upsell/02/index.html
+++ b/🛞/Upsell/02/index.html
@@ -130,7 +130,7 @@
         window.onload = updateProgressBar;
 
         document.getElementById('paymentButton').addEventListener('click', function() {
-            window.location.href = 'https://pay.pagueconfiavel.com/checkout/da08df21-1d8a-4ef3-810a-a901d0dbcac9'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
+            window.location.href = 'https://pay.sunize.com.br/cfWoXMdX'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
         });
     </script>
 
