--- a/🛞/Upsell/03/index.html
+++ b/🛞/Upsell/03/index.html
@@ -139,7 +139,7 @@
         window.onload = updateProgressBar;
 
         document.getElementById('paymentButton').addEventListener('click', function() {
-            window.location.href = 'https://pay.pagueconfiavel.com/checkout/37a17a30-8b98-44ea-86ff-59b93651ac5d'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
+            window.location.href = 'https://pay.sunize.com.br/rIpDPThW'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
         });
     </script>
 
