--- a/🫎/Upsell/04/index.html
+++ b/🫎/Upsell/04/index.html
@@ -138,7 +138,7 @@
         window.onload = updateProgressBar;
 
         document.getElementById('paymentButton').addEventListener('click', function() {
-            window.location.href = 'https://pay.pagueconfiavel.com/checkout/9ee98006-3bd3-4eb6-9060-1db86ca59655'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
+            window.location.href = 'https://pay.sunize.com.br/WyQBltDl'; // Substitua 'pagina-destino.html' pela URL para a qual deseja redirecionar
         });
     </script>
 
